Added achievements, only minor changes left for completion

--- a/WordsPlus/assets/scoreloop/SLAwards.bundle/en.lproj/Localizable.strings
+++ b/WordsPlus/assets/scoreloop/SLAwards.bundle/en.lproj/Localizable.strings
@@ -2,3 +2,31 @@
 "Award.wordsplus.testaward.description" = "Complete your first WordsPlus puzzle";
 "Award.wordsplus.testaward2.title" = "Solved second puzzle";
 "Award.wordsplus.testaward2.description" = "Complete your second WordsPlus puzzle";
+"Award.wordsplus.testaward3.title" = "Solved Third Puzzle";
+"Award.wordsplus.testaward3.description" = "another round of testing";
+"Award.wordsplus.bbmpersonalmsg.title" = "Spread The Love";
+"Award.wordsplus.bbmpersonalmsg.description" = "Use WordsPlus BBM to set your personal message";
+"Award.wordsplus.bbmstatusmsg.title" = "Tell Them You're Busy";
+"Award.wordsplus.bbmstatusmsg.description" = "Use WordsPlus BBM to set your status message";
+"Award.wordsplus.firstgame.title" = "Beginner's Luck";
+"Award.wordsplus.firstgame.description" = "Complete your first game at any level";
+"Award.wordsplus.usehint.title" = "Use a Hint";
+"Award.wordsplus.usehint.description" = "Use a hint to complete a puzzle";
+"Award.wordsplus.backtwoback.title" = "Back 2 Back";
+"Award.wordsplus.backtwoback.description" = "Complete 2 puzzles one after the other";
+"Award.wordsplus.threesome.title" = "3 Isn't a Crowd";
+"Award.wordsplus.threesome.description" = "Complete  3 puzzles one after the other";
+"Award.wordsplus.nohintsathard.title" = "All By Myself";
+"Award.wordsplus.nohintsathard.description" = "Finish a hard puzzle using no hints  ";
+"Award.wordsplus.underthirtyateasy.title" = "Expert At Easy";
+"Award.wordsplus.underthirtyateasy.description" = "Finish an easy puzzle under 0:30 seconds";
+"Award.wordsplus.overthreeminsatmedium.title" = "Just Average";
+"Award.wordsplus.overthreeminsatmedium.description" = "Take over 3:00 minutes to complete a medium puzzle";
+"Award.wordsplus.overtenmins.title" = "Grant Me Patience";
+"Award.wordsplus.overtenmins.description" = "Take over 10 minutes to complete a puzzle";
+"Award.wordsplus.ninetofive.title" = "Hardly Working";
+"Award.wordsplus.ninetofive.description" = "9 to 5? Take a break and finish a puzzle";
+"Award.wordsplus.underonemin.title" = "Top Notch";
+"Award.wordsplus.underonemin.description" = "Finish a puzzle under 1:00 minute";
+"Award.wordsplus.untouchable.title" = "The Untouchable";
+"Award.wordsplus.untouchable.description" = "Complete 20 games one after the other";
