Updated score issue, achievements and minor bugs

--- a/WordsPlus/assets/scoreloop/SLAwards.bundle/en.lproj/Localizable.strings
+++ b/WordsPlus/assets/scoreloop/SLAwards.bundle/en.lproj/Localizable.strings
@@ -26,11 +26,17 @@
 "Award.wordsplus.overtenmins.description" = "Take over 10:00 minutes to complete any puzzle";
 "Award.wordsplus.ninetofive.title" = "Hardly Working";
 "Award.wordsplus.ninetofive.description" = "Doing the 9 to 5 thing? Take a break and finish a puzzle";
+"Award.wordsplus.midnightrun.title" = "Midnight Run";
+"Award.wordsplus.midnightrun.description" = "Late night? Have some fun between 11pm and 1am ";
 "Award.wordsplus.overtenthousand.title" = "10K Marathon";
 "Award.wordsplus.overtenthousand.description" = "Get over 10 thousand points";
 "Award.wordsplus.overfiftythousand.title" = "50,000 Pts";
 "Award.wordsplus.overfiftythousand.description" = "Play your heart out and make it past 50 thousand points";
-"Award.wordsplus.overonek.title" = "6 Figure Fun";
-"Award.wordsplus.overonek.description" = "Get over 100,000 points, take a break, then play again";
+"Award.wordsplus.overonethousandk.title" = "6 Figure Fun";
+"Award.wordsplus.overonethousandk.description" = "Get over 100,000 points, take a break, then play again";
+"Award.wordsplus.overonemillion.title" = "1 In a Million";
+"Award.wordsplus.overonemillion.description" = "Gather up 1 million points to unlock this achievement";
+"Award.wordsplus.overonebillion.title" = "One BILLION Points!";
+"Award.wordsplus.overonebillion.description" = "Thank You. WordsPlus loves you too...now go get a day job :)";
 "Award.wordsplus.untouchable.title" = "The Untouchable";
 "Award.wordsplus.untouchable.description" = "Complete 20 games in a row - sorry no pausing allowed :)";
